--- a/tp.html
+++ b/tp.html
@@ -22,7 +22,7 @@
         <img src="images/𝖃𝖀𝕽𝕺.jpeg" alt="TP1" />
       </div>
       <h3>TP 1</h3>
-      <a href="tp/tp1.html" class="card-button">ACCÉDER</a>
+      <a href="tp/tp1/index.html" class="card-button">ACCÉDER</a>
     </div>
 
     <!-- TP 2 -->
