--- a/tp/tp1/index.html
+++ b/tp/tp1/index.html
@@ -2,98 +2,21 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sommaire</title>
-    <style>
-        body {
-            background: linear-gradient(135deg, #a8edea, #fed6e3);
-            font-family: 'Courier New', Courier, monospace;
-            margin: 0;
-            text-align: center;
-            padding: 20px;
-            color: #4a4a6a;
-            overflow: hidden;
-        }
-        h1 {
-            color: #8566aa;
-            font-size: 3em;
-            text-shadow: 0 0 8px #d8bfd8, 0 0 12px #a88dcf;
-            animation: glow 2s infinite alternate;
-        }
-        h2 {
-            margin: 15px 0;
-            font-size: 1.5em;
-            transition: transform 0.3s ease;
-        }
-        h2:hover {
-            transform: scale(1.2);
-        }
-        a {
-            text-decoration: none;
-            color: #8566aa;
-            font-weight: bold;
-            position: relative;
-        }
-        a:before {
-            content: '';
-            position: absolute;
-            width: 100%;
-            height: 2px;
-            bottom: -5px;
-            left: 0;
-            background-color: #8566aa;
-            visibility: hidden;
-            transform: scaleX(0);
-            transition: all 0.3s ease-in-out;
-        }
-        a:hover:before {
-            visibility: visible;
-            transform: scaleX(1);
-        }
-        a:hover {
-            color: #ff6699;
-            text-shadow: 0 0 5px #ff6699;
-        }
-        p {
-            font-size: 1em;
-            font-weight: bold;
-            margin-top: 30px;
-            color: #4a4a6a;
-        }
-        @keyframes glow {
-            from {
-                text-shadow: 0 0 10px #ff6699, 0 0 20px #ff6699, 0 0 30px #ff6699;
-            }
-            to {
-                text-shadow: 0 0 20px #ff66cc, 0 0 30px #ff66cc, 0 0 40px #ff66cc;
-            }
-        }
-        body:before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            opacity: 0.2;
-            animation: float 10s linear infinite;
-        }
-        @keyframes float {
-            0% {
-                background-position: 0 0;
-            }
-            100% {
-                background-position: 100% 100%;
-            }
-        }
-    </style>
+    <title>Accueil</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Sommaire TP 1</h1>
-    <h2><a href="presentation.html">Présentation du BTS</a></h2>
-    <h2><a href="slam.html">BTS SLAM</a></h2>
-    <h2><a href="sisr.html">BTS SISR</a></h2>
-    <h2><a href="../tp.html">Sommaire TP</a></h2>
-    <p>&copy; 2024 - GUETTOUCHE BASMA</p>
+    <h1>Bienvenue sur mon site BTS</h1>
+    <p>Ce site présente les différentes spécialités du BTS et un sommaire pour naviguer facilement.</p>
+
+    <a href="sommaire.html" class="bouton">Accéder au sommaire</a>
+    <a href="#" class="back-arrow" onclick="goToPortfolio()">← Retour au portfolio</a>
+
+    <script>
+      function goToPortfolio() {
+        localStorage.setItem("skipLoader", "true");
+        window.location.href = "index.html";
+      }
+    </script>
 </body>
 </html>
