--- a/certification.html
+++ b/certification.html
@@ -10,7 +10,7 @@
 <body>
 
   <!-- Flèche de retour -->
-  <a href="index.html" class="back-arrow" title="Retour à l'accueil">🡐</a>
+  <a href="index.html?skipLoader=true" class="back-arrow" title="Retour au sommaire">🡐 Retour au sommaire</a>
 
   <!-- Titre -->
   <header class="main-header">
