--- a/missions.html
+++ b/missions.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <a href="index.html" class="back-arrow">🡐</a>
+    <a href="index.html?skipLoader=true" class="back-arrow" title="Retour au sommaire">🡐 Retour au sommaire</a>
 
   <header class="main-header">
     <h1 class="arcade-blink">MES MISSIONS</h1>
