--- a/tp.html
+++ b/tp.html
@@ -8,7 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="index.html" class="back-arrow" >🡐</a>
+    <a href="index.html?skipLoader=true" class="back-arrow">🡐 Retour au sommaire</a>
+
 
   <header class="main-header">
     <h1 class="arcade-blink">MES TP</h1>
@@ -31,7 +32,7 @@
         <img src="images/𝙁𝙧𝙞𝙚𝙣𝙙.jpeg" alt="TP2" />
       </div>
       <h3>TP 2</h3>
-      <a href="tp/tp2.html" class="card-button">ACCÉDER</a>
+      <a href="tp/tpjs/index.html" class="card-button">ACCÉDER</a>
     </div>
 
     <!-- TP 3 -->
