--- a/tp/tp1/sommaire.html
+++ b/tp/tp1/sommaire.html
@@ -11,8 +11,7 @@
         <li><a href="presentation.html">Présentation BTS</a></li>
         <li><a href="slam.html">BTS SLAM</a></li>
         <li><a href="sisr.html">BTS SISR</a></li>
-        <li><a href="https://guettss.github.io/BTS-SIO/">Retour au portfolio</a></li>
-
+        <li><a href="sommaire1.html">Retour au portfolio</a></li>
     </ul>
 </body>
 </html>
