--- a/dev/tp.html
+++ b/dev/tp.html
@@ -29,7 +29,7 @@
         <img src="portfolio/images/𝖃𝖀𝕽𝕺.jpeg" alt="TP1" />
       </div>
       <h3>TP 1</h3>
-      <a href="tp/tp1/index.html" class="card-button">ACCÉDER</a>
+      <a href="/portfolio/tp/tp_1/index.html" class="card-button">ACCÉDER</a>
     </div>
 
     <!-- TP 2 -->
@@ -47,7 +47,7 @@
         <img src="portfolio/images/║︎ black icons ║︎.jpeg" alt="TP3" />
       </div>
       <h3>TP 3</h3>
-      <a href="tp/tp3.html" class="card-button">ACCÉDER</a>
+      <a href="/portfolio/tp/tp_3/index.html" class="card-button">ACCÉDER</a>
     </div>
 
     <!-- TP 4 -->
@@ -56,7 +56,7 @@
         <img src="portfolio/images/𝐅𝐫𝐢𝐞𝐧𝐝.jpeg" alt="TP4" />
       </div>
       <h3>TP 4</h3>
-      <a href="tp/tp4.html" class="card-button">ACCÉDER</a>
+      <a href="/portfolio/tp/tp_4/index.html" class="card-button">ACCÉDER</a>
     </div>
 
     <!-- TP 5 -->
@@ -65,7 +65,7 @@
         <img src="portfolio/images/♱.jpeg" alt="TP5" />
       </div>
       <h3>TP 5</h3>
-      <a href="tp/tp2.html" class="card-button">ACCÉDER</a>
+      <a href="/portfolio/tp/tp_5/index.html" class="card-button">ACCÉDER</a>
     </div>
 
     <!-- TP 6 -->
@@ -74,7 +74,7 @@
         <img src="portfolio/images/Kamogawa Genji.jpeg" alt="TP6" />
       </div>
       <h3>TP 6</h3>
-      <a href="tp/tp6.html" class="card-button">ACCÉDER</a>
+      <a href="/portfolio/tp/tp_6/index.html" class="card-button">ACCÉDER</a>
     </div>
 
   </section>
