--- a/dev/portfolio/tp/tp_1/index.html
+++ b/dev/portfolio/tp/tp_1/index.html
@@ -19,8 +19,8 @@
     <hr>
     <center>
 <table border="1" width="50%">
-        <tr><td>SLAM</td> <td><img src="/portfolio/tp/tp_1/ZcsR.gif" alt="presentation slam" width="200" height="200"></td></tr>
-        <tr><td>SISR</td> <td><img src="/portfolio/tp/tp_1/ZMQt.gif" alt="" width="200" height="200"></td></tr>
+        <tr><td>SLAM</td> <td><img src="ZcsR.gif" alt="presentation slam" width="200" height="200"></td></tr>
+        <tr><td>SISR</td> <td><img src="ZMQt.gif" alt="" width="200" height="200"></td></tr>
     </table>
     <hr>
     <h1>
