--- a/certification.html
+++ b/certification.html
@@ -27,7 +27,7 @@
         <img src="portfolio/images/DRO.gif" alt="Cybermalveillance" />
       </div>
       <h3>CERTIFICATIONS CYBERMALVEILLANCE</h3>
-      <a href="certifs/Attestation Sens Cyber.pdf" 
+      <a href="portfolio/certification/cybermalveillance/Attestationcyber.pdf" 
          target="_blank" 
          type="application/pdf" 
          class="card-button">
@@ -41,7 +41,7 @@
         <img src="portfolio/images/4bKB.gif" alt="Autre Certif" />
       </div>
       <h3>CERTIFICATIONS SECNUMACADEMIE</h3>
-      <a href="certifs/autre-certif.pdf" 
+      <a href="portfolio/certification/anssi/SecNum.pdf" 
          target="_blank" 
          type="application/pdf" 
          class="card-button">
@@ -57,9 +57,9 @@
   <h3>CERTIFICATIONS CNIL</h3>
   <!-- Cases des modules -->
   <div class="modules-grid">
-    <a href="certification/Cnil/module1/module1.pdf" target="_blank" class="module-button">Module 1</a>
-    <a href="certification/Cnil/module2/Module2.pdf" target="_blank" class="module-button">Module 2</a>
-    <a href="certification/Cnil/module3/Module3.pdf" target="_blank" class="module-button">Module 3</a>
+    <a href="portfolio/certification/cnil/module1.pdf" target="_blank" class="module-button">Module 1</a>
+    <a href="portfolio/certification/cnil/Module2.pdf" target="_blank" class="module-button">Module 2</a>
+    <a href="portfolio/certification/cnil/Module3.pdf" target="_blank" class="module-button">Module 3</a>
     <a href="../certifs/module4.pdf" target="_blank" class="module-button">Module 4</a>
     <a href="../certifs/module5.pdf" target="_blank" class="module-button">Module 5</a>
     <a href="/certifs/module6.pdf" target="_blank" class="module-button">Module 6</a>
