--- a/portfolio/missions/tp_10/index.html
+++ b/portfolio/missions/tp_10/index.html
@@ -126,13 +126,13 @@
         <ol class="project-list">
             <li class="project-card">
                 <h2>Database Agence de location</h2>
-                <img src="/portfolio/missions/tp_10/image.png" alt="Schéma base de données - Agence de location" class="project-image">
-                <a href="/portfolio/missions/tp_10/agence_location_db.sql" class="download-btn">Fichier SQL</a>
+                <img src="image.png" alt="Schéma base de données - Agence de location" class="project-image">
+                <a href="paris_sportifs.sql" class="download-btn">Fichier SQL</a>
             </li>
             <li class="project-card">
                 <h2>Application de paris sportifs</h2>
-                <img src="/portfolio/missions/tp_10/image copy.png" alt="Schéma base de données - Paris sportifs" class="project-image">
-                <a href="/portfolio/missions/tp_10/paris_sportifs.sql" class="download-btn">Fichier SQL</a>
+                <img src="image copy.png" alt="Schéma base de données - Paris sportifs" class="project-image">
+                <a href="agence_location_db.sql" class="download-btn">Fichier SQL</a>
             </li>
         </ol>
     </div>
