--- a/dev/certification.html
+++ b/dev/certification.html
@@ -60,10 +60,9 @@
     <a href="portfolio/certification/cnil/module1.pdf" target="_blank" class="module-button">Module 1</a>
     <a href="portfolio/certification/cnil/Module2.pdf" target="_blank" class="module-button">Module 2</a>
     <a href="portfolio/certification/cnil/Module3.pdf" target="_blank" class="module-button">Module 3</a>
-    <a href="../certifs/module4.pdf" target="_blank" class="module-button">Module 4</a>
-    <a href="../certifs/module5.pdf" target="_blank" class="module-button">Module 5</a>
-    <a href="/certifs/module6.pdf" target="_blank" class="module-button">Module 6</a>
-    <a href="../certifs/Attestation.pdf" target="_blank" class="module-button">Attestation</a>
+    <a href="portfolio/certification/cnil/module4.pdf" target="_blank" class="module-button">Module 4</a>
+    <a href="/certifs/module6.pdf" target="_blank" class="module-button">Module 5</a>
+    <a href="portfolio/certification/cnil/Attestation_de_suivi.pdf" target="_blank" class="module-button">Attestation</a>
   </div>
 </section>
 
